--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -16,48 +16,69 @@
 
   <body>
 
-  Services
-  Product
-  Vision
-  Features
-  About
-  Contact
+    <nav class="top-nav">
+  <a href="#">Services</a>
+  <a href="#">Product</a>
+  <a href="#">Vision</a>
+  <a href="#">Features</a>
+  <a href="#">About</a>
+  <a href="#">Contact</a>
+    </nav>
 
   <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-  Innovation
-  On
-  Demand
 
-  Get Started
-
-  <img src="img/header-img.png" alt="Image of a code snippet.">
-
-  Features
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  <section>
+    <div class="title">
+  <h1>Innovation<br>
+  On<br>
+  Demand</h1>
+  <button href="#" class="get-started-button" type="button">Get Started</button>
+    </div>
 
 
-  About
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  <img class="code-pic" src="img/header-img.png" alt="Image of a code snippet.">
+  </section>
+  <section class=fullbody>
+  <div class="vl"></div>
+  <section class="features">
+      <h5>Features</h5>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>   
+  </section>
+
+  <seciton class="about">
+      <h5>About</h5>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </seciton>
 
   <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
-  
-  Services
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  <section class="services">
+      <h5>Services</h5>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </section>
 
 
-  Product
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  <section class="product">
+      <h5>Product</h5>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </section>
 
-  Vision
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  <section class="vision">
+      <h5>Vision</h5>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </section>
+  <div class="vl"></div>
 
-  Contact
-  123 Way 456 Street
-  Somewhere, USA
-  1 (888) 888-8888
-  sales@greatidea.io
+  <section class="contact">
+      <h5>Contact</h5>
+      <p>123 Way 456 Street
+      Somewhere, USA</p><br>
+      <p>1 (888) 888-8888</p><br>
+      <p>sales@greatidea.io</p>   
+  </section>
 
-  Copyright Great Idea! 2018
-  
+  <section class="copyright">
+      Copyright Great Idea! 2018
+  </section>
+  </section>
   </body>
 </html>
